log
Sat, May 17, 2025  2:30:42 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Sun, May 18, 2025 12:20:44 AM: 
 sudoku.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:73:7: error: expected ')' before '{' token
       {
       ^
sudoku.c:85:1: error: expected expression before '}' token
 }
 ^
sudoku.c:71:9: error: unused variable 'found' [-Werror=unused-variable]
     int found =0;
         ^~~~~
sudoku.c:70:9: error: unused variable 'col' [-Werror=unused-variable]
     int col =-1;
         ^~~
sudoku.c:68:11: error: unused variable 'list' [-Werror=unused-variable]
     List* list=createList();
           ^~~~
sudoku.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
02b60d6
Sun, May 18, 2025 12:20:57 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:71:9: error: unused variable 'found' [-Werror=unused-variable]
     int found =0;
         ^~~~~
sudoku.c:70:9: error: variable 'col' set but not used [-Werror=unused-but-set-variable]
     int col =-1;
         ^~~
cc1.exe: all warnings being treated as errors
921ce55
Sun, May 18, 2025 12:21:08 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:71:9: error: unused variable 'found' [-Werror=unused-variable]
     int found =0;
         ^~~~~
sudoku.c:70:9: error: variable 'col' set but not used [-Werror=unused-but-set-variable]
     int col =-1;
         ^~~
cc1.exe: all warnings being treated as errors
f2d4152
Sun, May 18, 2025 12:23:09 AM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:71:9: error: unused variable 'found' [-Werror=unused-variable]
     int found =0;
         ^~~~~
sudoku.c:70:9: error: variable 'col' set but not used [-Werror=unused-but-set-variable]
     int col =-1;
         ^~~
cc1.exe: all warnings being treated as errors
9879819
Sun, May 18, 2025 12:28:39 AM: 
 sudoku.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:93:15: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return(EXIT_FAILURE);
               ^
sudoku.c:99:5: error: expected ';' before '}' token
     }
     ^
sudoku.c:71:9: error: unused variable 'found' [-Werror=unused-variable]
     int found =0;
         ^~~~~
cc1.exe: all warnings being treated as errors
f3bd112
Sun, May 18, 2025 12:28:55 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:93:15: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return(EXIT_FAILURE);
               ^
sudoku.c:99:5: error: expected ';' before '}' token
     }
     ^
cc1.exe: all warnings being treated as errors
cea817b
